# MAD-Q

./: .gitignore  ANALYSIS_README.md  PLAYING.md  README.md  pyproject.toml
config/: game_configs.yaml
docs/: IMPLEMENTATION.md  PYGAME_UI.md  SPECIFICATION.md
examples/: README.md  analyze_board_size_complexity.py  analyze_depth_performance.py  collect_game_length_distributions.py  evaluate_td_weights.py  generate_results_summary.py  hyperparameter_search.py  play_baseline.py  play_human.py  play_human_vs_baseline.py  play_human_vs_human.py  play_human_vs_minimax.py  play_human_vs_random.py  play_minimax_vs_agents.py  play_oracle.py  play_pygame.py  play_pygame_vs_ai.py  play_random.py  plot_board_size_analysis.py  plot_depth_analysis.py  plot_elo_evolution.py  plot_first_player_advantage.py  plot_game_length_distributions.py  plot_hyperparameter_heatmap.py  plot_move_time_distributions.py  run_agent_benchmarks.py  run_complete_analysis.py  run_minimax_depth_sweep.py  summarize_move_times.py  train_td_weights.py
examples/match_logs/: minimax_depth_sweep.csv  (+17 more)
results/: board_size_analysis.csv  depth_analysis.csv  game_length_distributions.csv  hyperparameter_search_results.json  results_summary.md  results_summary.tex  test_hyperparameter_search.json
src/: __init__.py
tests/: test_action_space.py  test_board.py  test_config.py  test_environment.py  test_game_state.py  test_integration.py  test_jump_basic_scenarios.py  test_jump_complex_scenarios.py  test_jump_game_replay.py  test_moves.py  test_network.py  test_pathfinding.py  test_state_encoder.py
(+30 files in other folders)
